# weather-station

exam_rain_app/build-exam_rain_app-Desktop_Qt_6_6_0_MinGW_64_bit-Debug/: CMakeCache.txt  build.ninja  cmake_install.cmake
exam_rain_app/build-exam_rain_app-Desktop_Qt_6_6_0_MinGW_64_bit-Debug/.cmake/api/v1/reply/: codemodel-v2-d3d4c3e78e507c517e99.json  directory-.-Debug-d3f395447f9eb5b8a30c.json  index-2023-11-15T04-05-53-0402.json  target-exam_rain_app-Debug-b1d26d1ab4308a436e43.json
exam_rain_app/build-exam_rain_app-Desktop_Qt_6_6_0_MinGW_64_bit-Debug/.cmake/api/v1/reply.prev/: cache-v2-3a06685347f6ba0b3c83.json  cmakeFiles-v1-a6181209e0bcfe892457.json  codemodel-v2-4d1429d4fc040a4cd6b6.json  directory-.-Debug-572fc7037443d21cfdb5.json  index-2023-11-14T16-30-18-0423.json  target-exam_rain_app-Debug-469276d66939aa6fc898.json  target-exam_rain_app_autogen-Debug-99e7aff86ec60ecb2e2e.json  target-exam_rain_app_autogen_timestamp_deps-Debug-6b10b4801d9ff59e55b4.json
exam_rain_app/build-exam_rain_app-Desktop_Qt_6_6_0_MinGW_64_bit-Debug/.qt/: QtDeploySupport.cmake
exam_rain_app/exam_rain_app/: CMakeLists.txt  bar.cpp  bar.h  client.cpp  client.h  column.cpp  column.h  graph.cpp  graph.h  main.cpp  rain.cpp  rain.h  rainrecord.cpp  rainrecord.h  rainrecordxml.cpp  rainrecordxml.h  rainxml.cpp  rainxml.h  stationthread.cpp  stationthread.h
